<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.auth.LoginActivity">

    <data>

        <variable
                name="viewmodel"
                type="net.simplifiedcoding.ui.auth.LoginViewModel"
        />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/layout_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:id="@+id/layout_logo"
                android:background="@color/colorBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >

            <ImageView
                    android:id="@+id/bookIconImageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_tvs_light"/>


            <ProgressBar
                    android:id="@+id/progress_bar_loading"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="-4dp"
                    android:foregroundGravity="bottom"
                    android:indeterminate="true"
                    android:padding="0dp"
                    android:theme="@style/ProgressBarStyle"/>

            <RelativeLayout
                    android:id="@+id/layout_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="130dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                <TextView
                        android:id="@+id/text_view_welcome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_back"
                        android:textColor="@color/colorBackground"
                        android:textSize="25sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/text_view_tagline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_view_welcome"
                        android:layout_marginTop="10dp"
                        android:text="@string/tagline"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/button_login"
                        android:layout_below="@+id/text_view_tagline"
                        android:gravity="center"
                        android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_username"
                            android:text="@={viewmodel.user.username}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:textColor="@color/colorTextView"
                            android:textColorHint="@color/colorAccent"
                            android:textSize="15sp"/>

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_password"
                            android:inputType="textPassword"
                            android:text="@={viewmodel.user.password}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:hint="@string/password"
                            android:textColor="@color/colorTextView"
                            android:textColorHint="@color/colorAccent"
                            android:textSize="15sp"/>

                    <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:padding="5dp">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sign_up"
                                android:textColor="@color/colorTextView"
                                android:textSize="14sp"
                                android:textStyle="bold"/>


                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end|center_vertical"
                                android:text="@string/forget_password"
                                android:textColor="@color/colorTextView"
                                android:textSize="14sp"
                                android:textStyle="bold"/>

                    </FrameLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_login"
                        android:onClick="@{()->viewmodel.onLoginButtonClick()}"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_above="@+id/text_view_skip"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/button_login_drawable"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"/>

                <TextView
                        android:id="@+id/text_view_skip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="12dp"
                        android:text="@string/skip"
                        android:textColor="@color/colorTextView"
                        android:textSize="15sp"/>


                <ProgressBar
                        android:visibility="invisible"
                        android:layout_centerInParent="true"
                        android:id="@+id/progressbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </RelativeLayout>


        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

