<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewmodel"
                  type="net.simplifiedcoding.ui.home.detail.EmployeeDetailViewModel"/>
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.home.detail.EmployeeDetailFragment">


        <ImageView
                android:layout_marginTop="15dp"
                android:image="@{viewmodel.currentEmployee.image}"
                android:layout_centerHorizontal="true"
                android:id="@+id/image_view"
                android:layout_width="200dp"
                android:layout_height="250dp"/>

        <Button
                android:layout_centerHorizontal="true"
                android:layout_below="@id/image_view"
                android:text="Take Picture"
                android:id="@+id/button_take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TableLayout
                android:padding="12dp"
                android:layout_below="@id/button_take_picture"
                android:layout_width="match_parent"
                android:stretchColumns="*"
                android:layout_height="match_parent">

            <TableRow>
                <TextView
                        android:fontFamily="@font/allerta"
                        android:textSize="14sp"
                        android:padding="7dp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/picture_updated_at"
                />

                <TextView
                        android:text="@{viewmodel.currentEmployee.imageTime}"
                        tools:text="20th August 2019"
                        android:fontFamily="@font/allerta"
                        android:textSize="14sp"
                        android:padding="7dp"
                        android:textColor="@color/colorPrimary"
                />

            </TableRow>

            <TableRow>
                <TextView
                        android:fontFamily="@font/allerta"
                        android:textSize="14sp"
                        android:padding="7dp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/employee_id"
                />

                <TextView
                        tools:text="4322"
                        android:text="@{viewmodel.currentEmployee.id}"
                        android:fontFamily="@font/allerta"
                        android:textSize="14sp"
                        android:padding="7dp"
                        android:textColor="@color/colorPrimary"
                />

            </TableRow>

            <TableRow>
                <TextView
                        android:fontFamily="@font/allerta"
                        android:textSize="14sp"
                        android:padding="7dp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/name"
                />

                <TextView
                        tools:text="Belal Khan"
                        android:text="@{viewmodel.currentEmployee.name}"
                        android:fontFamily="@font/allerta"
                        android:textSize="14sp"
                        android:padding="7dp"
                        android:textColor="@color/colorPrimary"
                />

            </TableRow>

            <TableRow>
                <TextView
                        android:fontFamily="@font/allerta"
                        android:textSize="14sp"
                        android:padding="7dp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/designation"
                />

                <TextView
                        tools:text="System Architect"
                        android:text="@{viewmodel.currentEmployee.designation}"
                        android:fontFamily="@font/allerta"
                        android:textSize="14sp"
                        android:padding="7dp"
                        android:textColor="@color/colorPrimary"
                />

            </TableRow>

            <TableRow>
                <TextView
                        android:fontFamily="@font/allerta"
                        android:textSize="14sp"
                        android:padding="7dp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/joiningdate"
                />

                <TextView
                        tools:text="30/04/2010"
                        android:text="@{viewmodel.currentEmployee.joiningDate}"
                        android:fontFamily="@font/allerta"
                        android:textSize="14sp"
                        android:padding="7dp"
                        android:textColor="@color/colorPrimary"
                />

            </TableRow>

            <TableRow>
                <TextView
                        android:fontFamily="@font/allerta"
                        android:textSize="14sp"
                        android:padding="7dp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/salary"
                />

                <TextView
                        tools:text="$320,000"
                        android:text="@{viewmodel.currentEmployee.salary}"
                        android:fontFamily="@font/allerta"
                        android:textSize="14sp"
                        android:padding="7dp"
                        android:textColor="@color/colorPrimary"
                />

            </TableRow>


        </TableLayout>

    </RelativeLayout>

</layout>
